# graphs_jjarek

./: .gitignore  README.md  pyproject.toml  test.py
src/graphs_jjarek/: __init__.py
